--- a/apache/httpd-vhosts.conf
+++ b/apache/httpd-vhosts.conf
@@ -13,6 +13,11 @@
 	# live janitor repo for dev
 	# Alias "/autoconversion" "/srv/sites/hvadhedderde/janitor/src/autoconversion"
 
+
+#	Alias "/setup" "/srv/sites/clients/supersonic_dk/submodules/janitor/src/config/setup/index.php"
+	 Alias "/setup" "/srv/sites/hvadhedderde/janitor/src/config/setup/index.php"
+
+
 	Alias "/images" "/srv/sites/clients/supersonic_dk/src/library/public"
 	Alias "/videos" "/srv/sites/clients/supersonic_dk/src/library/public"
 	Alias "/audios" "/srv/sites/clients/supersonic_dk/src/library/public"
@@ -26,7 +31,8 @@
 
 	# include path for php
 	SetEnv "LOCAL_PATH" "/srv/sites/clients/supersonic_dk/src"
-	SetEnv "FRAMEWORK_PATH" "/srv/sites/clients/supersonic_dk/submodules/janitor/src"
+	SetEnv "FRAMEWORK_PATH" "/srv/sites/hvadhedderde/janitor/src"
+#	SetEnv "FRAMEWORK_PATH" "/srv/sites/clients/supersonic_dk/submodules/janitor/src"
 	
 	# setup local css+js mergers
 	Alias "/js/lib/build" "/srv/sites/clients/supersonic_dk/submodules/wtf-js-merger"
