--- a/apache/httpd-vhosts.conf
+++ b/apache/httpd-vhosts.conf
@@ -15,7 +15,7 @@
 
 
 #	Alias "/setup" "/srv/sites/clients/supersonic_dk/submodules/janitor/src/config/setup/index.php"
-	 Alias "/setup" "/srv/sites/hvadhedderde/janitor/src/config/setup/index.php"
+#	 Alias "/setup" "/srv/sites/hvadhedderde/janitor/src/config/setup/index.php"
 
 
 	Alias "/images" "/srv/sites/clients/supersonic_dk/src/library/public"
