--- a/apache/httpd-vhosts.conf
+++ b/apache/httpd-vhosts.conf
@@ -4,19 +4,19 @@
 	ServerName supersonic.local
 
 	# submodule with jes repo
-	Alias "/js/jes/src" "/srv/sites/clients/supersonic_dk/submodules/jes/src"
+	#Alias "/js/jes/src" "/srv/sites/clients/supersonic_dk/submodules/jes/src"
 	# live jes repo for dev
-	# Alias "/js/jes/src" "/srv/sites/hvadhedderde/jes/src"
-	
+	Alias "/js/jes/src" "/srv/sites/hvadhedderde/jes/src"
+
+	# submodule with dearcss repo
+	# Alias "/css/dearcss/src" "/srv/sites/clients/hvidevarehuset_dk/submodules/dearcss/src"
+	# live dearcss repo for dev
+	Alias "/css/dearcss/src" "/srv/sites/hvadhedderde/dearcss/src"
+
 	# submodule with janitor repo
 	Alias "/autoconversion" "/srv/sites/clients/supersonic_dk/submodules/janitor/src/autoconversion"
 	# live janitor repo for dev
 	# Alias "/autoconversion" "/srv/sites/hvadhedderde/janitor/src/autoconversion"
-
-
-#	Alias "/setup" "/srv/sites/clients/supersonic_dk/submodules/janitor/src/config/setup/index.php"
-#	 Alias "/setup" "/srv/sites/hvadhedderde/janitor/src/config/setup/index.php"
-
 
 	Alias "/images" "/srv/sites/clients/supersonic_dk/src/library/public"
 	Alias "/videos" "/srv/sites/clients/supersonic_dk/src/library/public"
