updated and merged

--- a/apache/httpd-vhosts.conf
+++ b/apache/httpd-vhosts.conf
@@ -39,4 +39,10 @@
 	SetEnv "JS_PATH" "/srv/sites/clients/supersonic_dk/src/www/js"
 	Alias "/css/lib/build" "/srv/sites/clients/supersonic_dk/submodules/wtf-css-merger"
 	SetEnv "CSS_PATH" "/srv/sites/clients/supersonic_dk/src/www/css"
+
+	Alias "/js/admin/lib/build" "/srv/sites/clients/supersonic_dk/submodules/wtf-js-merger"
+	SetEnv "JS_PATH" "/srv/sites/clients/supersonic_dk/src/www/js/admin"
+	Alias "/css/admin/lib/build" "/srv/sites/clients/supersonic_dk/submodules/wtf-css-merger"
+	SetEnv "CSS_PATH" "/srv/sites/clients/supersonic_dk/src/www/css/admin"
+
 </VirtualHost>
