updated and merged

--- a/apache/httpd-vhosts.conf
+++ b/apache/httpd-vhosts.conf
@@ -40,9 +40,13 @@
 	Alias "/css/lib/build" "/srv/sites/clients/supersonic_dk/submodules/wtf-css-merger"
 	SetEnv "CSS_PATH" "/srv/sites/clients/supersonic_dk/src/www/css"
 
-	Alias "/js/admin/lib/build" "/srv/sites/clients/supersonic_dk/submodules/wtf-js-merger"
-	SetEnv "JS_PATH" "/srv/sites/clients/supersonic_dk/src/www/js/admin"
-	Alias "/css/admin/lib/build" "/srv/sites/clients/supersonic_dk/submodules/wtf-css-merger"
-	SetEnv "CSS_PATH" "/srv/sites/clients/supersonic_dk/src/www/css/admin"
+	Alias "/js/admin/lib/build" "/srv/sites/clients/p1beboer_dk/submodules/wtf-js-merger"
+	<location "/js/admin/lib/build">
+		SetEnv "JS_PATH" "/srv/sites/clients/p1beboer_dk/src/www/js/admin"
+	</location>
 
+	Alias "/css/admin/lib/build" "/srv/sites/clients/p1beboer_dk/submodules/wtf-css-merger"
+	<location "/css/admin/lib/build">
+		SetEnv "CSS_PATH" "/srv/sites/clients/p1beboer_dk/src/www/css/admin"
+	</location>
 </VirtualHost>
