--- a/apache/httpd-vhosts.conf
+++ b/apache/httpd-vhosts.conf
@@ -3,27 +3,9 @@
 	DocumentRoot "/srv/sites/clients/supersonic_dk/src/www"
 	ServerName supersonic.local
 
-	# submodule with jes repo
-	#Alias "/js/jes/src" "/srv/sites/clients/supersonic_dk/submodules/jes/src"
-	# live jes repo for dev
-	Alias "/js/jes/src" "/srv/sites/hvadhedderde/jes/src"
 
-	# submodule with dearcss repo
-	# Alias "/css/dearcss/src" "/srv/sites/clients/supersonic_dk/submodules/dearcss/src"
-	# live dearcss repo for dev
-	Alias "/css/dearcss/src" "/srv/sites/hvadhedderde/dearcss/src"
-
-	# submodule with janitor repo
-	Alias "/autoconversion" "/srv/sites/clients/supersonic_dk/submodules/janitor/src/autoconversion"
-	# live janitor repo for dev
-	# Alias "/autoconversion" "/srv/sites/hvadhedderde/janitor/src/autoconversion"
-
-	Alias "/images" "/srv/sites/clients/supersonic_dk/src/library/public"
-	Alias "/videos" "/srv/sites/clients/supersonic_dk/src/library/public"
-	Alias "/audios" "/srv/sites/clients/supersonic_dk/src/library/public"
-	<Directory "/srv/sites/clients/supersonic_dk/src/library/public">
-		ErrorDocument 404 /autoconversion/index.php
-	</Directory>
+	# live manipulator repo for dev
+	Alias "/js/manipulator/src" "/srv/sites/clients/manipulator/src"
 
 	<Directory "/srv/sites/clients/supersonic_dk/src/www">
 		ErrorDocument 404 /404.php
@@ -31,22 +13,26 @@
 
 	# include path for php
 	SetEnv "LOCAL_PATH" "/srv/sites/clients/supersonic_dk/src"
-	SetEnv "FRAMEWORK_PATH" "/srv/sites/clients/janitor/src"
-#	SetEnv "FRAMEWORK_PATH" "/srv/sites/clients/supersonic_dk/submodules/janitor/src"
-	
+	SetEnv "FRAMEWORK_PATH" "/srv/sites/clients/supersonic_dk/submodules/janitor/src"
+	#SetEnv "FRAMEWORK_PATH" "/srv/sites/clients/janitor/src"
+
+
+	# reference to backend interface
+	Alias "/janitor" "/srv/sites/clients/supersonic_dk/submodules/janitor/src/www"
+
+	# setup janitor autoconversion
+	Alias "/autoconversion" "/srv/sites/clients/supersonic_dk/submodules/janitor/src/autoconversion"
+	Alias "/images" "/srv/sites/clients/supersonic_dk/src/library/public"
+	Alias "/videos" "/srv/sites/clients/supersonic_dk/src/library/public"
+	Alias "/audios" "/srv/sites/clients/supersonic_dk/src/library/public"
+	<Directory "/srv/sites/clients/supersonic_dk/src/library/public">
+		ErrorDocument 404 /autoconversion/index.php
+	</Directory>
+
+
 	# setup local css+js mergers
-	Alias "/js/lib/build" "/srv/sites/clients/supersonic_dk/submodules/wtf-js-merger"
-	SetEnv "JS_PATH" "/srv/sites/clients/supersonic_dk/src/www/js"
-	Alias "/css/lib/build" "/srv/sites/clients/supersonic_dk/submodules/wtf-css-merger"
-	SetEnv "CSS_PATH" "/srv/sites/clients/supersonic_dk/src/www/css"
-
-	Alias "/js/admin/lib/build" "/srv/sites/clients/supersonic_dk/submodules/wtf-js-merger"
-	<location "/js/admin/lib/build">
-		SetEnv "JS_PATH" "/srv/sites/clients/supersonic_dk/src/www/js/admin"
-	</location>
-
-	Alias "/css/admin/lib/build" "/srv/sites/clients/supersonic_dk/submodules/wtf-css-merger"
-	<location "/css/admin/lib/build">
-		SetEnv "CSS_PATH" "/srv/sites/clients/supersonic_dk/src/www/css/admin"
-	</location>
+	Alias "/js/lib/build" "/srv/sites/clients/supersonic_dk/submodules/js-merger"
+	Alias "/css/lib/build" "/srv/sites/clients/supersonic_dk/submodules/css-merger"
+	Alias "/admin/js/lib/build" "/srv/sites/clients/supersonic_dk/submodules/js-merger"
+	Alias "/admin/css/lib/build" "/srv/sites/clients/supersonic_dk/submodules/css-merger"
 </VirtualHost>
