--- a/apache/httpd-vhosts.conf
+++ b/apache/httpd-vhosts.conf
@@ -11,6 +11,7 @@
 		ErrorDocument 404 /404.php
 	</Directory>
 
+
 	# include path for php
 	SetEnv "LOCAL_PATH" "/srv/sites/clients/supersonic_dk/src"
 	SetEnv "FRAMEWORK_PATH" "/srv/sites/clients/supersonic_dk/submodules/janitor/src"
@@ -18,7 +19,8 @@
 
 
 	# reference to backend interface
-	Alias "/janitor" "/srv/sites/clients/supersonic_dk/submodules/janitor/src/www"
+#	Alias "/janitor" "/srv/sites/clients/supersonic_dk/submodules/janitor/src/www"
+	Alias "/janitor" "/srv/sites/clients/janitor/src/www"
 
 	# setup janitor autoconversion
 	Alias "/autoconversion" "/srv/sites/clients/supersonic_dk/submodules/janitor/src/autoconversion"
